# opengl_house

./: .gitignore  CMakeLists.txt
src/: imageloader.cpp  main.cpp
